add readme file

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Aug 23 17:33:49 CST 2020
-sdk.dir=C\:\\Users\\zhy_h\\AppData\\Local\\Android\\Sdk
+#Mon Aug 24 11:23:31 CST 2020
+sdk.dir=/Users/zhy/Library/Android/sdk
